kubernetes/services/code-server/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: code-server
  labels:
    name: code-server
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
